@@ -1161,7 +1161,13 @@ else {
 		}
 	}
 
-	order_result($data['items'], $data['sortfield'], getPageSortOrder());
+	if ($data['sortfield'] === 'status') {
+		orderItemsByStatus($data['items'], getPageSortOrder());
+	}
+	else {
+		order_result($data['items'], $data['sortfield'], getPageSortOrder());
+	}
+
 	$data['paging'] = getPagingLine($data['items'], array('itemid'));
 
 	$itemTriggerIds = array();
